fixed weird padding on collapse expand button

--- a/Catfish/wwwroot/assets/css/custom.css
+++ b/Catfish/wwwroot/assets/css/custom.css
@@ -12,6 +12,6 @@
 	padding-left: 0;
 }
 
-#itemlist-page .container-fluid .top-nav .collapse-expand {
-	//padding-right:10px;
+#collapse-expand-button{
+	padding-right:0;
 }
